# bref

./: .gitignore  README.md  bref-compress-prompt.kiro.hook  bref-steering.md  pyproject.toml
bref/: __init__.py  __main__.py  cache.py  cli.py  compression.py  config.py  core.py  middleware.py  proxy.py  router.py  types.py
tests/: test_core.py
vscode-bref/: .vscodeignore  LICENSE  bref-0.1.0.vsix  esbuild.js  package-lock.json  package.json  vscode-bref-0.1.0.vsix  vscode-bref-0.2.0.vsix
vscode-bref/src/: bridge.ts  compression.ts  extension.ts  setup.ts  statsView.ts
