[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bref"
version = "0.1.0"
description = "Reduce AI costs by compressing prompts, caching responses, and routing to the cheapest capable model."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.24",
    "tiktoken>=0.5",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
redis = ["redis>=5.0"]
