[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bref"
version = "0.1.0"
description = "Reduce AI costs by compressing prompts, caching responses, and routing to the cheapest capable model."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Abhinandan Dubey", email = "abhinandandubey@gmail.com"},
]
keywords = ["ai", "llm", "prompt-compression", "token-optimization", "cost-reduction", "caching", "model-routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24",
    "tiktoken>=0.5",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/alivcor/bref"
Repository = "https://github.com/alivcor/bref"
Issues = "https://github.com/alivcor/bref/issues"
Documentation = "https://github.com/alivcor/bref#readme"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
redis = ["redis>=5.0"]
